# SliceVault

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/raw/recount3/gtex_v8/: README.md
notebooks/: demo.ipynb
scripts/: download_recount3_gtex_v8.py  download_recount3_gtex_v8_junctions.sh  train_realworld_multitissue_noleak.py  train_realworld_split.py
scripts/train/: train_gtex_v8_tissue.py  train_gtex_v8_tissue_multitissue.py  train_gtex_v8_tissue_strict.py  train_realworld_split_noleak.py
splicevault/: __init__.py  classify.py  cli.py  psi.py  signatures.py  viz.py
tests/: conftest.py  test_classify.py  test_psi.py
workflow/: Snakefile
